<resources>
    <string name="app_name">Character Sheet</string>
    <string name="CA">Armor Class</string>
    <string name="CAR">CHA</string>
    <string name="CON">CON</string>
    <string name="DES">DEX</string>
    <string name="EXP">Experience Points</string>
    <string name="FUE">STR</string>
    <string name="INT">INT</string>
    <string name="NV">Level</string>
    <string name="PG">Hit Points</string>
    <string name="PGActual">Current Hit Points</string>
    <string name="PGTotal">Total Hit Points</string>
    <string name="SAB">WIS</string>
    <string name="VEL">Speed</string>
    <string name="acrobacias">Acrobatics</string>
    <string name="arcanos">Arcana</string>
    <string name="atletismo">Athletics</string>
    <string name="clase">Class</string>
    <string name="dadosBt">Dice</string>
    <string name="editar">Edit</string>
    <string name="engañar">Deception</string>
    <string name="finalizar">Finish</string>
    <string name="guardar">Save</string>
    <string name="habilidades">SKILLS</string>
    <string name="habilidades_bonus">BONUS SKILLS</string>
    <string name="historia">History</string>
    <string name="interpretacion">Performance</string>
    <string name="intimidar">Intimidation</string>
    <string name="investigacion">Investigation</string>
    <string name="juegoDeManos">Sleight of Hand</string>
    <string name="medicina">Medicine</string>
    <string name="naturaleza">Nature</string>
    <string name="nombre">Name</string>
    <string name="percepcion">Perception</string>
    <string name="perspicacia">Insight</string>
    <string name="persuasion">Persuasion</string>
    <string name="raza">Race</string>
    <string name="religion">Religion</string>
    <string name="salir">Exit</string>
    <string name="salvacion">SAVING THROWS</string>
    <string name="salvacion_bonus">SAVING THROWS BONUS</string>
    <string name="sigilo">Stealth</string>
    <string name="stats">STATS</string>
    <string name="supervivencia">Survival</string>
    <string name="tratoConAnimales">Animal Handling</string>
    <string name="volver">Return</string>
    <string name="araina">Araina</string>
    <string name="batrok">Batrok</string>
    <string name="centauro">Centaur</string>
    <string name="draconido">Dragonborn</string>
    <string name="elfo">Elf</string>
    <string name="enano">Dwarf</string>
    <string name="felinido">Tabaxi</string>
    <string name="formigo" translatable="false">Fórmigo</string>
    <string name="gnomo">Gnome</string>
    <string name="hipotido" translatable="false">Hipótido</string>
    <string name="humano">Human</string>
    <string name="karasu">Kenku</string>
    <string name="kitsune" translatable="false">Kitsune</string>
    <string name="mediano">Halfling</string>
    <string name="mida" translatable="false">Mida</string>
    <string name="morlock" translatable="false">Morlock</string>
    <string name="orco">Orc</string>
    <string name="rakhasa" translatable="false">Rakhasa</string>
    <string name="saurio">Lizardfolk</string>
    <string name="semielfo">Half-Elf</string>
    <string name="semiorco">Half-Orc</string>
    <string name="tiefling">Tiefling</string>
    <string name="vipero">Yuan-ti</string>
</resources>
