<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                //nombre
                <TableRow>

                    <TextView
                        android:text="@string/nombre"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/nombre"
                        android:textSize="18sp"/>

                </TableRow>

                //raza
                <TableRow>

                    <TextView
                        android:text="@string/raza"
                        android:textSize="18sp"/>

                    <Spinner
                        android:id="@+id/raza"/>

                </TableRow>

                //clase
                <TableRow>

                    <TextView
                        android:text="@string/clase"
                        android:textSize="18sp"/>

                    <Spinner
                        android:id="@+id/clase"/>

                </TableRow>

                //nivel
                <TableRow>

                    <TextView
                        android:text="@string/NV"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/NV"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp"/>

                </TableRow>

                //experiencia
                <TableRow>

                    <TextView
                        android:text="@string/EXP"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/EXP"
                        android:inputType="number"
                        android:textSize="18sp"/>

                </TableRow>

                //puntos de golpe
                <TableRow>

                    <TextView
                        android:text="@string/PG"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/PG"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textSize="18sp"/>

                </TableRow>

                //clase de armadura
                <TableRow>

                    <TextView
                        android:text="@string/CA"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/CA"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp"/>

                </TableRow>

                //velocidad
                <TableRow>

                    <TextView
                        android:text="@string/VEL"
                        android:textSize="18sp"/>

                    <EditText
                        android:id="@+id/VEL"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp"/>

                </TableRow>

            </TableLayout>

            //ESTADÍSITCAS
            <TableLayout
                android:id="@+id/statsTableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/FUE"
                        android:layout_span="1"
                        android:text="@string/FUE"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/FUEvalor"
                        android:layout_span="1"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/DES"
                        android:layout_span="1"
                        android:text="@string/DES"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/DESvalor"
                        android:layout_span="1"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/text12"
                        android:layout_span="1"
                        android:text="@string/CON"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/CONvalor"
                        android:layout_span="1"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/INT"
                        android:layout_span="1"
                        android:text="@string/INT"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/INTvalor"
                        android:layout_span="1"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/SAB"
                        android:layout_span="1"
                        android:text="@string/SAB"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/SABvalor"
                        android:layout_span="1"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/CAR"
                        android:layout_span="1"
                        android:text="@string/CAR"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/CARvalor"
                        android:layout_span="1"
                        android:inputType="number"
                        android:maxLength="2"
                        android:textSize="18sp" />

                </TableRow>

            </TableLayout>

            //Dados
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dadosBt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dadosBt" />

                <TextView
                    android:id="@+id/dados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tiradas de Salvación Bonus"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/salvBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"/>

            </LinearLayout>

            //FUE, DES, CON, INT, SAB, CAR
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/FUEcb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/FUE"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/DEScb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/DES"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/CONcb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CON"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/INTcb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/INT"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/SABcb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/SAB"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/CARcb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/CAR"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Habilidades Bonus"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/habBonus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/acrobaciasCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/acrobacias"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/arcanosCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/arcanos"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/atletismoCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atletismo"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/engañarCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/engañar"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/historiaCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/historia"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/interpretacionCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/interpretacion"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/intimidarCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/intimidar"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/investigacionCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/investigacion"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/juegoDeManosCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/juegoDeManos"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">



                    <CheckBox
                        android:id="@+id/medicinaCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/medicina"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/naturalezaCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/naturaleza"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/percepcionCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/percepcion"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/perspicaciaCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/perspicacia"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/persuasionCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/persuasion"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/religionCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/religion"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/sigiloCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sigilo"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/supervivenciaCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/supervivencia"
                        android:textSize="18sp" />

                    <CheckBox
                        android:id="@+id/tratoConAnimalesCb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tratoConAnimales"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="finalizar"/>

        <Button
            android:id="@+id/guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/finalizar"
            android:text="guardar"/>

    </RelativeLayout>

</LinearLayout>